--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="ClickThrough Digital is Australia's leading digital marketing agency, helping businesses get more traffic online.">
   
   
-  <title>ClickThrough Digital - Australian Marketing Agency</title>
+  <title>ClickThrough - Australian Marketing Agency</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/icon54-v3/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
